// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx fn component define > arrowFunction 1`] = `
"import { defineComponent as _defineComponent, createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
const App = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "App",
    props: {},
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();"
`;

exports[`jsx fn component define > function 1`] = `
"import { defineComponent as _defineComponent, createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
const App = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "App",
    props: {},
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();"
`;

exports[`jsx props define > Cross file type 1`] = `
"import { defineComponent as _defineComponent, createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
const App = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "App",
    props: {
      a: {
        type: String,
        required: true
      },
      b: {
        type: Number,
        required: true
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();
export {};"
`;

exports[`jsx props define > TypeLiteral Props 1`] = `
"import { defineComponent as _defineComponent, createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
const App = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "App",
    props: {
      a: {
        type: Number,
        required: true
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();"
`;

exports[`jsx props define > TypeReference props 1`] = `
"import { defineComponent as _defineComponent, createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
const App = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "App",
    props: {
      a: {
        type: Number,
        required: true
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();"
`;

exports[`jsx props define > TypeReference props complex 1`] = `
"import { defineComponent as _defineComponent, createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
const CompAndRefer = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "CompAndRefer",
    props: {
      a: {
        type: Number,
        required: true
      },
      b: {
        type: String,
        required: false
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();
const CompAndInner = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "CompAndInner",
    props: {
      a: {
        type: Number,
        required: true
      },
      b: {
        type: String,
        required: false
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const params = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();
const CompUnionRefer = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "CompUnionRefer",
    props: {
      a: {
        type: Number,
        required: true
      },
      b: {
        type: String,
        required: false
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const props = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();
const CompUnionInner = (/*VUE DFC*/() => {
  const __SLOT = ["children"];
  const __JSX = _defineComponent({
    name: "CompUnionInner",
    props: {
      a: {
        type: Number,
        required: true
      },
      b: {
        type: String,
        required: false
      }
    },
    setup(__PROPS, __CTX) {
      __CTX.expose();
      const params = new Proxy({}, {
        get: (_, key) => {
          if (__SLOT.includes(key)) return __CTX.slots.default();
          return __PROPS[key];
        }
      });
      return /*VUE DFC*/() => {
        return _createVNode("div", null, [_createTextVNode("hello")]);
      };
    }
  });
  return __JSX;
})();"
`;
